Ajeitando o splitAvaiability