@@ -3,10 +3,9 @@ package com.example.Authenticator.service;
 import com.azure.identity.ClientSecretCredential;
 import com.azure.identity.ClientSecretCredentialBuilder;
 import com.example.Authenticator.entity.*;
-import com.microsoft.graph.models.BookingAppointment;
-import com.microsoft.graph.models.BookingCustomerInformation;
-import com.microsoft.graph.models.BookingService;
-import com.microsoft.graph.models.DateTimeTimeZone;
+import com.example.Authenticator.entity.AvailabilityItem;
+import com.example.Authenticator.entity.TimeSlot;
+import com.microsoft.graph.models.*;
 import com.microsoft.graph.serviceclient.GraphServiceClient;
 import com.microsoft.graph.solutions.bookingbusinesses.item.getstaffavailability.GetStaffAvailabilityPostRequestBody;
 import com.microsoft.graph.solutions.bookingbusinesses.item.getstaffavailability.GetStaffAvailabilityPostResponse;
@@ -17,7 +16,7 @@ import org.springframework.stereotype.Service;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
+import java.util.*;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -26,6 +25,8 @@ public class GraphService {
 
     @Autowired
     AuthProperties authProperties;
+
+
 
     private GraphServiceClient createGraphClient() {
         ClientSecretCredential clientSecretCredential = new ClientSecretCredentialBuilder()
@@ -36,8 +37,7 @@ public class GraphService {
 
         String[] scopes = {"https://graph.microsoft.com/.default"};
 
-        GraphServiceClient graphServiceClient = new GraphServiceClient(clientSecretCredential, scopes);
-        return graphServiceClient;
+        return new GraphServiceClient(clientSecretCredential, scopes);
     }
 
     public List<String> listStaffMemberIdServices(String businessId, String serviceId) {
@@ -50,11 +50,10 @@ public class GraphService {
                 .byBookingServiceId(serviceId)
                 .get();
 
-        List<String> staffMemberIds = businessService.getStaffMemberIds();
-        return staffMemberIds;
+        return businessService.getStaffMemberIds();
     }
 
-    public List<StaffAvailabilityResponseDto> listStaffAvailability(
+    public List<StaffAvailabilityResponseDto> listStaffAvailabilityAvailable(
             String businessId,
             String serviceId,
             DateTimeWrapper startDateTime,
@@ -73,39 +72,23 @@ public class GraphService {
                 .getStaffAvailability()
                 .post(getStaffAvailabilityPostRequestBody);
 
+        return getStaffAvailabilityAvailable(response);
+    }
+
+    private List<StaffAvailabilityResponseDto> getStaffAvailabilityAvailable(GetStaffAvailabilityPostResponse response) {
         List<StaffAvailabilityResponseDto> filteredResponse = response.getValue().stream()
                 .map(staffAvailabilityItem -> {
                     StaffAvailabilityResponseDto dto = new StaffAvailabilityResponseDto();
                     dto.setStaffId(staffAvailabilityItem.getStaffId());
 
-                    List<AvailabilityItem> availabilityItems = filterAvailabilityStaff(staffAvailabilityItem.getAvailabilityItems().stream()
-                            .map(item -> {
-                                com.example.Authenticator.entity.AvailabilityItem availabilityItem = new AvailabilityItem();
-                                availabilityItem.setStatus(item.getStatus().toString());
-
-                                DateTimeWrapper startDateTimeWrapper = new DateTimeWrapper();
-                                if (item.getStartDateTime() != null) {
-                                    startDateTimeWrapper.setDateTime(item.getStartDateTime().getDateTime());
-                                    startDateTimeWrapper.setTimeZone(item.getStartDateTime().getTimeZone());
-                                }
-                                availabilityItem.setStartDateTime(startDateTimeWrapper);
-
-                                DateTimeWrapper endDateTimeWrapper = new DateTimeWrapper();
-                                if (item.getEndDateTime() != null) {
-                                    endDateTimeWrapper.setDateTime(item.getEndDateTime().getDateTime());
-                                    endDateTimeWrapper.setTimeZone(item.getEndDateTime().getTimeZone());
-                                }
-                                availabilityItem.setEndDateTime(endDateTimeWrapper);
-
-                                return availabilityItem;
-                            })
+                    List<AvailabilityItem> availabilityItems = filterAvailabilityStaffAvailable(staffAvailabilityItem.getAvailabilityItems().stream()
+                            .map(GraphService::apply)
                             .collect(Collectors.toList()));
 
                     dto.setAvailabilityItems(availabilityItems);
                     return dto;
                 })
                 .collect(Collectors.toList());
-
         return filteredResponse;
     }
 
@@ -128,10 +111,22 @@ public class GraphService {
         return getStaffAvailabilityPostRequestBody;
     }
 
-    private List<com.example.Authenticator.entity.AvailabilityItem> filterAvailabilityStaff(List<com.example.Authenticator.entity.AvailabilityItem> availabilityItems) {
+    private List<com.example.Authenticator.entity.AvailabilityItem> filterAvailabilityStaffAvailable(List<com.example.Authenticator.entity.AvailabilityItem> availabilityItems) {
         return availabilityItems.stream()
                 .filter(item -> "Available".equalsIgnoreCase(item.getStatus()))
                 .collect(Collectors.toList());
+    }
+
+    public Duration getTimeSlotInterval(String bookingBusinessId, String serviceId) {
+        BookingService bookingService = createGraphClient()
+                .solutions()
+                .bookingBusinesses()
+                .byBookingBusinessId(bookingBusinessId)
+                .services()
+                .byBookingServiceId(serviceId)
+                .get();
+
+        return bookingService.getSchedulingPolicy().getTimeSlotInterval().getDuration();
     }
 
     public Duration getServiceDefaultDuration(String bookingBusinessId, String serviceId) {
@@ -146,21 +141,25 @@ public class GraphService {
         return bookingService.getDefaultDuration().getDuration();
     }
 
+    public List<TimeSlot> removeDuplicateTimeSlots(List<TimeSlot> timeSlots) {
+        Set<TimeSlot> uniqueTimeSlots = new HashSet<>(timeSlots);
+        return new ArrayList<>(uniqueTimeSlots);
+    }
+
     public List<TimeSlot> splitAvailabilityByServiceDuration(
             String bookingBusinessId,
             String serviceId,
             DateTimeWrapper startDateTime,
             DateTimeWrapper endDateTime) {
 
-        Duration serviceDuration = getServiceDefaultDuration(bookingBusinessId, serviceId);
+        Duration serviceDuration = getTimeSlotInterval(bookingBusinessId, serviceId);
 
-        List<StaffAvailabilityResponseDto> staffAvailabilityList = listStaffAvailability(
+        List<StaffAvailabilityResponseDto> staffAvailabilityList = listStaffAvailabilityAvailable(
                 bookingBusinessId, serviceId, startDateTime, endDateTime);
 
         List<TimeSlot> dividedTimeSlots = new ArrayList<>();
 
         for (StaffAvailabilityResponseDto staffAvailability : staffAvailabilityList) {
-            String staffId = staffAvailability.getStaffId();
             for (AvailabilityItem availabilityItem : staffAvailability.getAvailabilityItems()) {
                 if ("Available".equalsIgnoreCase(availabilityItem.getStatus())) {
 
@@ -172,19 +171,18 @@ public class GraphService {
                         LocalDateTime slotEnd = slotStart.plus(serviceDuration);
 
 
-                        dividedTimeSlots.add(new TimeSlot(slotStart, slotEnd, staffId));
+                        dividedTimeSlots.add(new TimeSlot(slotStart, slotEnd));
 
                         slotStart = slotEnd;
                     }
                 }
             }
         }
-        return dividedTimeSlots;
+        return removeDuplicateTimeSlots(dividedTimeSlots);
     }
 
     public BookingAppointment createAppointment(String businessId, AppointmentDto appointmentDto) {
-
-        GraphServiceClient graphCliente = createGraphClient();
+        GraphServiceClient graphClient = createGraphClient();
 
         BookingAppointment appointment = new BookingAppointment();
 
@@ -193,14 +191,35 @@ public class GraphService {
         startDateTimeZone.setTimeZone(appointmentDto.getStartDateTime().getTimeZone());
 
         DateTimeTimeZone endDateTimeZone = new DateTimeTimeZone();
-        endDateTimeZone.setDateTime(appointmentDto.getEndDateTime().getDateTime());
-        endDateTimeZone.setTimeZone(appointmentDto.getEndDateTime().getTimeZone());
+        LocalDateTime startDateTime = LocalDateTime.parse(appointmentDto.getStartDateTime().getDateTime());
+        Duration duration = getServiceDefaultDuration(businessId, appointmentDto.getServiceId());
+        LocalDateTime endDateTime = startDateTime.plus(duration);
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm:ss");;
+        String endDateTimeString = endDateTime.format(formatter);
+
+        endDateTimeZone.setDateTime(endDateTimeString);
+        endDateTimeZone.setTimeZone(appointmentDto.getStartDateTime().getTimeZone());
+
+        DateTimeWrapper endDateTimeWrapper = new DateTimeWrapper();
+        endDateTimeWrapper.setDateTime(endDateTimeString);
+        endDateTimeWrapper.setTimeZone(appointmentDto.getStartDateTime().getTimeZone());
+
+        DateTimeWrapper fixedStartDateTimeWrapper = fixTimeStartDate(appointmentDto.getStartDateTime());
+        DateTimeWrapper fixedendDateTimeWrapper = fixTimeEndDate(endDateTimeWrapper);
+
+
 
         appointment.setStartDateTime(startDateTimeZone);
         appointment.setEndDateTime(endDateTimeZone);
-
         appointment.setServiceId(appointmentDto.getServiceId());
-        appointment.setStaffMemberIds(appointmentDto.getStaffMemberIds());
+
+        List<String> availableStaffId = findAvailableStaffForBooking(
+                businessId,
+                appointmentDto.getServiceId(),
+                fixedStartDateTimeWrapper,
+                fixedendDateTimeWrapper);
+
+        appointment.setStaffMemberIds(availableStaffId);
 
         List<BookingCustomerInformation> customerInfos = appointmentDto.getCustomers().stream()
                 .map(customer -> {
@@ -212,26 +231,25 @@ public class GraphService {
                     bookingCustomer.setTimeZone(customer.getTimeZone());
                     bookingCustomer.setOdataType(customer.getODataType());
                     return bookingCustomer;
-                }).collect(Collectors.toList());
+                }).toList();
 
         appointment.setCustomers(new ArrayList<>(customerInfos));
         appointment.setIsLocationOnline(true);
 
-        BookingAppointment createdAppointment = graphCliente
+        return graphClient
                 .solutions()
                 .bookingBusinesses()
                 .byBookingBusinessId(businessId)
                 .appointments()
                 .post(appointment);
 
-        return createdAppointment;
     }
 
     public void cancelAppointment(String businessId, String appointmentId) {
         GraphServiceClient graphClient = createGraphClient();
 
         com.microsoft.graph.solutions.bookingbusinesses.item.appointments.item.cancel.CancelPostRequestBody cancelPostRequestBody = new com.microsoft.graph.solutions.bookingbusinesses.item.appointments.item.cancel.CancelPostRequestBody();
-        cancelPostRequestBody.setCancellationMessage("Your appointment has been successfully cancelled. Please call us again.");
+        cancelPostRequestBody.setCancellationMessage("Your appointment has been successfully cancelled.");
         graphClient
                 .solutions()
                 .bookingBusinesses()
@@ -264,15 +282,152 @@ public class GraphService {
         existingAppointment.setStartDateTime(startDateTimeZone);
         existingAppointment.setEndDateTime(endDateTimeZone);
         existingAppointment.setStaffMemberIds(appointmentDto.getStaffMemberIds());
+        existingAppointment.setIsLocationOnline(true);
 
-        BookingAppointment updatedAppointment = graphClient
+        return graphClient
                 .solutions()
                 .bookingBusinesses()
                 .byBookingBusinessId(businessId)
                 .appointments()
                 .byBookingAppointmentId(appointmentId)
                 .patch(existingAppointment);
+    }
 
-        return updatedAppointment;
+    public List<StaffAvailabilityResponseDto> listStaffAvailabilityBusy(
+            String businessId,
+            String serviceId,
+            DateTimeWrapper startDateTime,
+            DateTimeWrapper endDateTime) {
+
+        GraphServiceClient graphClient = createGraphClient();
+
+        List<String> staffIds = listStaffMemberIdServices(businessId, serviceId);
+
+        GetStaffAvailabilityPostRequestBody getStaffAvailabilityPostRequestBody = getGetStaffAvailabilityPostRequestBody(startDateTime, endDateTime, staffIds);
+
+        GetStaffAvailabilityPostResponse response = graphClient
+                .solutions()
+                .bookingBusinesses()
+                .byBookingBusinessId(businessId)
+                .getStaffAvailability()
+                .post(getStaffAvailabilityPostRequestBody);
+
+        return getStaffAvailabilityBusy(Objects.requireNonNull(response));
+    }
+
+    private List<StaffAvailabilityResponseDto> getStaffAvailabilityBusy(GetStaffAvailabilityPostResponse response) {
+        return Objects.requireNonNull(response.getValue()).stream()
+                .map(staffAvailabilityItem -> {
+                    StaffAvailabilityResponseDto dto = new StaffAvailabilityResponseDto();
+                    dto.setStaffId(staffAvailabilityItem.getStaffId());
+
+                    List<AvailabilityItem> availabilityItems = filterAvailabilityStaffBusy(Objects.requireNonNull(staffAvailabilityItem.getAvailabilityItems()).stream()
+                            .map(GraphService::apply)
+                            .collect(Collectors.toList()));
+
+                    dto.setAvailabilityItems(availabilityItems);
+                    return dto;
+                })
+                .collect(Collectors.toList());
+    }
+
+    private List<com.example.Authenticator.entity.AvailabilityItem> filterAvailabilityStaffBusy(List<com.example.Authenticator.entity.AvailabilityItem> availabilityItems) {
+        return availabilityItems.stream()
+                .filter(item -> "Busy".equalsIgnoreCase(item.getStatus()))
+                .collect(Collectors.toList());
+    }
+
+    private List<Map.Entry<String, Long>> listStaffByBusyCount(List<StaffAvailabilityResponseDto> staffAvailabilityList) {
+
+        return staffAvailabilityList.stream()
+                .collect(Collectors.toMap(
+                        StaffAvailabilityResponseDto::getStaffId,
+                        dto -> dto.getAvailabilityItems().stream()
+                                .filter(item -> "Busy".equalsIgnoreCase(item.getStatus()))
+                                .count()
+                ))
+                .entrySet().stream()
+                .sorted(Map.Entry.comparingByValue())
+                .collect(Collectors.toList());
+    }
+
+    public List<String> listStaffMemberIdServicesByAvailability(String businessId, String serviceId, DateTimeWrapper startDateTime, DateTimeWrapper endDateTime) {
+        List<StaffAvailabilityResponseDto> staffAvailabilityList = listStaffAvailabilityBusy(businessId, serviceId, startDateTime, endDateTime);
+        List<Map.Entry<String, Long>> staffByBusyCount = listStaffByBusyCount(staffAvailabilityList);
+        return staffByBusyCount.stream()
+                .map(Map.Entry::getKey)
+                .collect(Collectors.toList());
+    }
+
+    public List<String> findAvailableStaffForBooking(
+            String businessId,
+            String serviceId,
+            DateTimeWrapper startDateTime,
+            DateTimeWrapper endDateTime) {
+
+        List<String> staffIds = listStaffMemberIdServicesByAvailability(businessId, serviceId, startDateTime, endDateTime);
+
+        for (String staffId : staffIds) {
+            List<StaffAvailabilityResponseDto> availableStaff = listStaffAvailabilityAvailable(
+                    businessId,
+                    serviceId,
+                    startDateTime,
+                    endDateTime);
+
+            boolean isAvailable = availableStaff.stream()
+                    .anyMatch(dto -> dto.getStaffId().equals(staffId)
+                            && !dto.getAvailabilityItems().isEmpty());
+
+            if (isAvailable) {
+                return Collections.singletonList(staffId);
+            }
+        }
+
+        return null;
+    }
+
+    private static AvailabilityItem apply(com.microsoft.graph.models.AvailabilityItem item) {
+        AvailabilityItem availabilityItem = new AvailabilityItem();
+        availabilityItem.setStatus(Objects.requireNonNull(item.getStatus()).toString());
+
+        DateTimeWrapper startDateTimeWrapper = new DateTimeWrapper();
+        if (item.getStartDateTime() != null) {
+            startDateTimeWrapper.setDateTime(item.getStartDateTime().getDateTime());
+            startDateTimeWrapper.setTimeZone(item.getStartDateTime().getTimeZone());
+        }
+        availabilityItem.setStartDateTime(startDateTimeWrapper);
+
+        DateTimeWrapper endDateTimeWrapper = new DateTimeWrapper();
+        if (item.getEndDateTime() != null) {
+            endDateTimeWrapper.setDateTime(item.getEndDateTime().getDateTime());
+            endDateTimeWrapper.setTimeZone(item.getEndDateTime().getTimeZone());
+        }
+        availabilityItem.setEndDateTime(endDateTimeWrapper);
+
+        return availabilityItem;
+    }
+
+    public static DateTimeWrapper fixTimeStartDate(DateTimeWrapper dateTimeWrapper) {
+        LocalDateTime originalDateTime = LocalDateTime.parse(dateTimeWrapper.getDateTime(), DateTimeFormatter.ISO_DATE_TIME);
+
+        LocalDateTime fixedDateTime = originalDateTime.withHour(1).withMinute(0).withSecond(0).withNano(0);
+
+        DateTimeWrapper fixedStartDateTimeWrapper = new DateTimeWrapper();
+        fixedStartDateTimeWrapper.setDateTime(fixedDateTime.format(DateTimeFormatter.ISO_DATE_TIME));
+        fixedStartDateTimeWrapper.setTimeZone(dateTimeWrapper.getTimeZone());
+
+        return fixedStartDateTimeWrapper;
+    }
+
+    public static DateTimeWrapper fixTimeEndDate(DateTimeWrapper dateTimeWrapper) {
+        LocalDateTime originalDateTime = LocalDateTime.parse(dateTimeWrapper.getDateTime(), DateTimeFormatter.ISO_DATE_TIME);
+
+        LocalDateTime fixedDateTime = originalDateTime.withHour(23).withMinute(0).withSecond(0).withNano(0);
+
+        DateTimeWrapper fixedEndDateTimeWrapper = new DateTimeWrapper();
+        fixedEndDateTimeWrapper.setDateTime(fixedDateTime.format(DateTimeFormatter.ISO_DATE_TIME));
+        fixedEndDateTimeWrapper.setTimeZone(dateTimeWrapper.getTimeZone());
+
+        return fixedEndDateTimeWrapper;
     }
 }
